# envhub-app

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  lint.sh  notes.txt
src/: data_logger.h  log.h  main.c  power_ctrl.c  power_ctrl.h  sensors.c  sensors.h  status.c  status.h  system_stats.c  system_stats.h  system_usage.c  system_usage.h  touch_input.c  touch_input.h
src/services/: data_logger.c  data_logger.h  power_service.c  sensor_service.c  sensor_service.h  status_service.c  status_service.h  time_service.c  time_service.h
src/ui/: CMakeLists.txt  file_list_gen.cmake  globals.xml  lvgl_ui_compat.h  project.xml  ui_envhub.c  ui_envhub.h  ui_envhub_gen.c  ui_envhub_gen.h  ui_helpers.c  ui_helpers.h  ui_status_types.h
src/ui/fonts/: fonts.h  plex_sans_12.c  plex_sans_12_data.c  plex_sans_24_data.c
src/ui/screens/: screen_main.xml  screen_main_gen.c  screen_secondary.xml  screen_secondary_gen.c  screen_secondary_gen.h
tools/git-hooks/: pre-commit
ui/: CMakeLists.txt  file_list_gen.cmake  ui_envhub.c  ui_envhub.h  ui_hello_world_gen.h
ui/screens/: screen_main.xml  screen_main_gen.c  screen_secondary.xml
